[tool.poetry]
name = "testing"
version = "0.1.0"
description = ""
authors = ["VictorSully79 <victorsullivan@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pygsheets = "^2.0.5"
pandas = "^1.4.1"
google-api-python-client = "^2.37.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
